tests/paczka1/fuzzy1/64487281.err
Error in line 1: 8aIRIipdo8 A287 33,4
Error in line 3: 8aIRIipdo8 S781 22,7
Error in line 6: 8aIRIipdo8 A850 40,4
Error in line 13: HmY8X S781 7,5
